# ai-ebook-site

./: .gitignore  README.md  pyproject.toml  run.py
backend/: main.py
backend/app/: runner.py
backend/app/aws/: s3.py
backend/app/core/: config.py  logger.py  middleware.py
backend/app/decorator/: thread.py
backend/app/docs/: docs-30123372231716333231.1260004.docx  docs-40517500651716332542.0510826.docx  docs-40998429011716332687.6069615.docx
backend/app/models/: cover-45b15652-156e-11ef-998c-fd66ad6de2b8.docx  ebook.py  ebook_generator.py  langchain_wrapper.py  pdf_converter.py  teste-35ebd1dd-b3f0-478e-ba0b-2033118d0654.docx  teste-9a65815a-5d9b-4fe9-9a98-06efd3484c80.docx  teste-a57b338c-c23f-477b-bea5-69aa69b8b0ee.docx  teste-e1e74980-a6fc-4147-8418-c782e435793e.docx
backend/app/resend/: email_service.py
backend/app/routes/: generation.py  routes.py  stripe_routes.py
backend/app/schemas/: schemas.py
backend/app/stripe/: stripe_handler.py
backend/tests/: test_routes.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx
frontend/app/(default)/: layout.tsx  page.tsx
frontend/app/(failed)/failed/: page.tsx
frontend/app/(generate-sell)/generate-sell/: checkout.tsx  page.tsx  preview.tsx
frontend/app/(landing)/landing/: page.tsx
frontend/app/(sell)/sell/: page.tsx
frontend/app/(success)/success/: page.tsx
frontend/components/facebook/: pixel.tsx
